project/todoapp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todoapp-volume
          persistentVolumeClaim:
            claimName: todoapp-claim
      containers:
        - name: todo-app
          image: riverfire/dwk-todo-app:v0.4
          volumeMounts:
            - name: todoapp-volume
              mountPath: /src/main/resources/static/images
